Conflict to be solved in dashboard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   awesome_dialog:
   collection:
   scrollable_clean_calendar:
+  permission_handler:
 
 
   # The following adds the Cupertino Icons font to your application.
