--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,8 +7,11 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
-    <application android:label="Haazir Janaab" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
+    <application android:label="Haazir Janaab" android:name="${applicationName}" android:icon="@mipmap/ic_launcher" android:requestLegacyExternalStorage="true">
 
         <!-- Place the API key here -->
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAXm1bWIPXYaiH0mDoYVZYyEuNDTO9LIWA"/>
