--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   scrollable_clean_calendar:
   permission_handler:
   flutter_downloader:
-  path_provider: 
+  path_provider:
+  device_info_plus:
 
 
   # The following adds the Cupertino Icons font to your application.
