Hr Dashboard work:- today pending, approved, rejected leaves with today attendance and HR leads are working

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:label="Haazir Janaab"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        android:requestLegacyExternalStorage="true">
+        android:requestLegacyExternalStorage="true"
+        android:enableOnBackInvokedCallback="true">
 
         <!-- Google Maps API Key -->
         <meta-data
