--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,7 +11,9 @@ analyzer:
   errors:
     avoid_print: ignore
     depend_on_referenced_packages: ignore
+    deprecated_member_use: ignore ignore
     file_names: ignore
+    unnecessary_null_comparison: ignore
     use_build_context_synchronously: ignore
     use_super_parameters: ignore
 include: package:flutter_lints/flutter.yaml
