check internet connectivityiz on or not

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,13 +52,13 @@ dependencies:
   table_calendar:
   awesome_dialog:
   collection:
-  # scrollable_clean_calendar:
   permission_handler:
   flutter_downloader:
   path_provider:
   device_info_plus:
   fade_shimmer:
-  # socket_io_client:
+  upgrader:
+  app_settings: ^6.1.1
   # firebase_core:
   # firebase_auth:
   # cloud_firestore:
