--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,12 @@ dependencies:
   fade_shimmer:
   upgrader:
   app_settings: ^6.1.1
-  # firebase_core:
-  # firebase_auth:
-  # cloud_firestore:
+  firebase_core:
+  cloud_firestore:
+  firebase_messaging:
+  flutter_local_notifications:
+  android_intent_plus:
+  socket_io_client:
 
 
   # The following adds the Cupertino Icons font to your application.
