--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   flutter_local_notifications:
   android_intent_plus:
   socket_io_client:
+  flutter_chat_ui:
 
 
   # The following adds the Cupertino Icons font to your application.
